--- a/train.ipynb
+++ b/train.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "name": "train.py",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -13,6 +14,16 @@
     "accelerator": "GPU"
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/KIMCAT33/ML-Pipeline/blob/master/train.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "metadata": {
@@ -25,7 +36,21 @@
         }
       },
       "source": [
+        "from __future__ import absolute_import, division, print_function, unicode_literals\n",
+        "from __future__ import absolute_import\n",
+        "from __future__ import division\n",
+        "from __future__ import print_function\n",
+        "from __future__ import unicode_literals\n",
+        "\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "import seaborn as sns\n",
+        "from keras import models\n",
+        "from keras import layers\n",
+        "from google.cloud import bigquery\n",
         "from google.colab import auth\n",
+        "\n",
         "auth.authenticate_user()\n",
         "print('Authenticated')"
       ],
@@ -49,8 +74,6 @@
       },
       "source": [
         "project_id = 'pipeliner'\n",
-        "\n",
-        "from google.cloud import bigquery\n",
         "\n",
         "client = bigquery.Client(project=project_id)"
       ],
@@ -188,13 +211,6 @@
         }
       },
       "source": [
-        "import pandas as pd\n",
-        "import numpy as np\n",
-        "from sklearn.model_selection import train_test_split\n",
-        "import seaborn as sns\n",
-        "from keras import models\n",
-        "from keras import layers\n",
-        "\n",
         "columns = ['is_male', 'mother_age', 'plurality', 'gestation_weeks']\n",
         "df.dropna(how=\"any\", inplace=True)\n",
         "\n",
